Add configuration annotation to @Enable* annotated classes (#162)
* Add @Configuration to class with @EnableMethodSecurity

* Add some more @Configuration to classes with @Enable* annotations.